tests/NormalTests/paczka2/big_fuzzy/54043025.err
Error in line 1: l8syO A17 14,5
Error in line 14: l8syO A737 4,7
Error in line 21: R4TKRgDX S463 64,4
Error in line 17: 94rziHWGafQ A17 56,7
Error in line 32: kwiiFhJ A737 214,3
Error in line 55: ZMC S455 -4,2
Error in line 47: 94rziHWGafQ S463 94,7
Error in line 58: yk8xOe S463 74,2
Error in line 53: ZMC S455 94,7
Error in line 73: ZMC A17 44,3
Error in line 75: R4TKRgDX S463 65,1
Error in line 63: kwiiFhJ A17 56,4
Error in line 80: R4TKRgDX A737 77,4
Error in line 81: kwiiFhJ A737 72,7
Error in line 85: 94rziHWGafQ A17 68,3
Error in line 83: kwiiFhJ A17 43,3
Error in line 97: S455 S455 3075
Error in line 103: l8syO A17 19,6
Error in line 96: S455 S455 6,7
Error in line 110: S455 S463 17,4
Error in line 116: R4TKRgDX A17 88,6
Error in line 125: R4TKRgDX S463 78,9
Error in line 147: ZMC A17 54,1
Error in line 154: 94rziHWGafQ A737 98,3
Error in line 153: l8syO A737 0,1
Error in line 159: l8syO A17 78,8
Error in line 161: S455 A737 105,1
Error in line 165: S455 S463 6,7
Error in line 173: 94rziHWGafQ A737 33,3
Error in line 180: S455 S463 21,9
Error in line 194: ZMC A17 37,1
Error in line 205: kwiiFhJ A737 55,0
Error in line 212: S455 A17 81,6
Error in line 215: kwiiFhJ A17 0,5
Error in line 217: kwiiFhJ S463 98,4
Error in line 209: R4TKRgDX S455 119,2
Error in line 236: yk8xOe A737 40,3
Error in line 230: 94rziHWGafQ S463 53,7
Error in line 233: R4TKRgDX S463 59,6
